basic usage includes health checking

--- a/basic.cfg
+++ b/basic.cfg
@@ -14,5 +14,6 @@ frontend http-in
   stats uri /admin?stats
 
 backend web
-  server s1 localhost:20001 maxconn 32
-  server s2 localhost:20002 maxconn 32
+  option httpchk GET /health
+  server s1 localhost:20001 maxconn 32 check
+  server s2 localhost:20002 maxconn 32 check
