--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/tlhunter/consul-haproxy-example#readme",
   "dependencies": {
     "consul": "^0.27.0",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "request": "^2.79.0"
   }
 }
